// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DocElementParser.parseMarkdownishText 1`] = `
Array [
  Object {
    "kind": "text",
    "text": "not an escape: C:\\\\Dog\\\\Cat",
  },
]
`;

exports[`DocElementParser.parseMarkdownishText 2`] = `
Array [
  Object {
    "kind": "text",
    "text": "escaped symbols: $^",
  },
]
`;

exports[`DocElementParser.parseMarkdownishText 3`] = `
Array [
  Object {
    "kind": "text",
    "text": "escaped backslashes: \\\\ \\\\\\\\ end",
  },
]
`;

exports[`DocElementParser.parseMarkdownishText 4`] = `
Array [
  Object {
    "kind": "text",
    "text": "escaped HTML: <td>",
  },
]
`;

exports[`DocElementParser.parseMarkdownishText 5`] = `
Array [
  Object {
    "kind": "text",
    "text": "real HTML: ",
  },
  Object {
    "kind": "html-tag",
    "token": "<td>",
  },
  Object {
    "kind": "text",
    "text": " ",
  },
  Object {
    "kind": "html-tag",
    "token": "</td>",
  },
  Object {
    "kind": "text",
    "text": " ",
  },
  Object {
    "kind": "html-tag",
    "token": "<a href=\\"#\\" />",
  },
]
`;

exports[`DocElementParser.parseMarkdownishText 6`] = `
Array [
  Object {
    "kind": "text",
    "text": "HTML with mixed quotes: ",
  },
  Object {
    "kind": "html-tag",
    "token": "<tag attr1=\\"#\\" attr2='#' />",
  },
]
`;

exports[`DocElementParser.parseMarkdownishText 7`] = `
Array [
  Object {
    "kind": "text",
    "text": "escaped and regular HTML: <a>\\\\",
  },
  Object {
    "kind": "html-tag",
    "token": "<b>",
  },
  Object {
    "kind": "text",
    "text": "<c>",
  },
  Object {
    "kind": "html-tag",
    "token": "<d>",
  },
]
`;

exports[`DocElementParser.parseMarkdownishText 8`] = `
Array [
  Object {
    "kind": "text",
    "text": "Example: \\"{ \\\\\\"maxItemsToShow\\\\\\": 123 }\\"",
  },
]
`;
